fix: z-index overlap with table sticky header

--- a/app/(search)/styles.module.scss
+++ b/app/(search)/styles.module.scss
@@ -57,7 +57,7 @@
         height: 65px;
         border-bottom: 1px solid var(--graycolor);
         background-color: var(--forecolor);
-        z-index: 50;
+        z-index: 999;
         align-items: center;
         padding: 0 0.5rem;
     }
@@ -74,7 +74,7 @@
         justify-content: space-between;
         align-items: center;
         background-color: var(--backgroundcolor-accent);
-        z-index: 10;
+        z-index: 999;
         color: var(--forecolor);
         padding: 0 2rem;
         box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
